--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -16,6 +16,22 @@
   --card-background: #ffffff;
   --gray-color: #8c8b8b;
   --accent-background: #ebeafc;
+  --cv-gradient-start: #9746f6;
+  --cv-gradient-end: #5873f6;
+  --about-me-background: #fafafa;
+  --mat-divider-color: #e7e7e7;
+  --chip-blue: #0263f5;
+  --chip-blue-background: #e9f2fd;
+  --chip-orange: #bd4502;
+  --chip-orange-background: #fff0e5;
+  --chip-green: #29804b;
+  --chip-green-background: #f2f8f0;
+  --chip-gray: #4d4d4d;
+  --chip-gray-background: #f4f4f4;
+  --header-color: #fdfdfd;
+  --footer-color: #b06bff;
+  --border-header: #e7e7e7;
+  --button-header: #ffffff;
 
   --dark-title-color: #e6e6e6;
   --dark-text-color: #cccccc;
