--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,28 @@
 <div id="footer" class="footer">
-  <span class="info">
-    <img class="icon" src="../../assets/icons/mail.svg" />
+  @if (showTitle || width > 600) {
+  <div class="title">
+    like what you see? <br class="show-on-mobile" />
+    <span class="colored">let's work together</span>
+  </div>
+  }
+  <div class="infos">
+    <a class="info underline" href="tel:+972506622002"
+      ><img class="icon" src="../../assets/icons/phone.svg" />+972506622002</a
+    >
     <a
-      class="link underline"
+      class="info underline"
       href="https://mail.google.com/mail/?view=cm&fs=1&to=hadasyosef2@gmail.com"
       target="_blank"
-      >hadasyosef2&#64;gmail.com</a
+      ><img class="icon" src="../../assets/icons/mail.svg" />
+      hadasyosef2&#64;gmail.com</a
     >
-  </span>
-  <span class="info">
-    <img class="icon" src="../../assets/icons/phone.svg" />
-    <a class="link underline" href="tel:+972506622002">+972506622002</a>
-  </span>
-  <span class="info">
-    <img class="icon" src="../../assets/icons/linkedin.svg" />
     <a
-      class="link"
+      class="info underline"
       href="https://www.linkedin.com/in/hadasyosef/"
       target="_blank"
-      >hadasyosef/</a
     >
-  </span>
+      <img class="icon" src="../../assets/icons/linkedin.svg" />
+      hadasyosef</a
+    >
+  </div>
 </div>
