--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,34 +2,68 @@
 
 .header {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   padding: 1rem 5rem;
   font-size: 0.875rem;
   font-weight: 500;
-
-  .link {
-    color: var(--card-background);
-  }
 
   .logo {
     display: flex;
     float: left;
     font-size: 1.125rem;
     font-weight: 700;
+
+    .link {
+      background: transparent;
+    }
   }
 
   .links {
     display: flex;
-    gap: 3rem;
+    gap: 1rem;
     float: right;
 
-    .selected-link {
-      font-weight: 700;
+    .link {
+      color: var(--card-background);
+      background: var(--button-header);
+
+      &:hover {
+        box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08);
+      }
+
+      .phone {
+        content: url("../../assets/icons/phone.svg");
+      }
+
+      .mail {
+        content: url("../../assets/icons/mail.svg");
+      }
+
+      .linkedin {
+        content: url("../../assets/icons/linkedin.svg");
+      }
     }
 
-    :hover {
-      text-decoration: underline;
+    a {
+      border: 1px var(--border-header) solid;
+      border-radius: 0.5rem;
+      padding: 0.5rem;
+      font-size: 1.75rem;
+    }
+
+    .cv {
+      font-size: 1rem;
+      font-weight: 600;
+      color: var(--card-background);
+      background: linear-gradient(
+        267.3deg,
+        var(--cv-gradient-start) -22.49%,
+        var(--cv-gradient-end) 117.1%
+      );
+      border: none;
+      padding: 0.5rem 1rem;
+      line-height: 130%;
     }
   }
 }
@@ -37,7 +71,19 @@
 @media (max-width: 600px) {
   .header-mobile {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
+
+    .logo {
+      display: flex;
+      float: left;
+      font-size: 1.125rem;
+      font-weight: 700;
+      line-height: normal;
+
+      .link {
+        background: transparent;
+      }
+    }
 
     .menu-btn {
       content: url("../../assets/icons/menu-light.svg");
@@ -63,35 +109,38 @@
       .menu-position {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
         position: absolute;
-        top: 30%;
+        top: 25%;
+        padding: 0 2.5rem;
 
-        .link {
-          font-size: 1.125rem;
-          font-weight: 500;
-          padding: 1.5rem 1.5rem 0 1.5rem;
+        ::ng-deep.footer {
+          gap: 2rem;
+          padding: 1.5rem;
+          border-top: none;
+          justify-content: left;
         }
 
-        .selected-link {
-          font-weight: 700;
-        }
-
-        .contact {
-          border: 1px solid var(--border-color-first);
+        a {
+          border: 1px var(--border-color-first) solid;
           border-radius: 0.5rem;
+          padding: 0.5rem;
+          font-size: 1.75rem;
+          text-align: center;
+        }
+
+        .cv-mobile {
+          font-size: 1rem;
+          font-weight: 600;
+          color: var(--card-background);
+          background: linear-gradient(
+            267.3deg,
+            var(--cv-gradient-start) -22.49%,
+            var(--cv-gradient-end) 117.1%
+          );
+          border: none;
+          padding: 1rem;
           line-height: normal;
-
-          ::ng-deep.footer {
-            gap: 2rem;
-            padding: 1.5rem;
-            border-top: none;
-            justify-content: left;
-
-            .link {
-              font-size: 0.875rem;
-            }
-          }
+          margin: 0 1.5rem;
         }
       }
     }
