change beyond mobile images

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -313,19 +313,19 @@
         gap: 2.5rem;
 
         .pancakes:hover {
-          background-image: url("../../assets/home/pancakes-mobile.png");
+          background-image: url("../../assets/home/pancakes-mobile.svg");
         }
 
         .workout:hover {
-          background-image: url("../../assets/home/workout-mobile.png");
+          background-image: url("../../assets/home/workout-mobile.svg");
         }
 
         .movie:hover {
-          background-image: url("../../assets/home/movie-mobile.png");
+          background-image: url("../../assets/home/movie-mobile.svg");
         }
 
         .baking:hover {
-          background-image: url("../../assets/home/baking-mobile.png");
+          background-image: url("../../assets/home/baking-mobile.svg");
         }
       }
     }
