--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -230,7 +230,7 @@
 
 @media (max-width: 600px) {
   .home {
-    gap: 2.5rem;
+    gap: 5rem;
 
     .mobile-padding {
       display: flex;
@@ -301,7 +301,7 @@
 
     .beyond {
       gap: 2.5rem;
-      padding: 5rem 1.5rem;
+      padding: 5rem 0;
 
       .title {
         .header {
