fix text in pass

--- a/src/app/password-dialog/password-dialog.component.html
+++ b/src/app/password-dialog/password-dialog.component.html
@@ -3,7 +3,7 @@
   <img src="../../assets/icons/protected.svg" />
   <div class="content">
     <span class="title">Password Protected</span>
-    <span class="sub-title">Enter the password to acces this case study</span>
+    <span class="sub-title">Enter the password to access this case study</span>
   </div>
   <form class="form" [formGroup]="form" (submit)="submit()">
     <input
